--- a/style.css
+++ b/style.css
@@ -8,5 +8,28 @@ p{
 }
 
 body{
-    background-color: rgb(253, 229, 233);
+    background-color: rgb(238, 250, 244);
+    margin:0;
+}
+
+.ListStyle {
+    color:rgba(122, 144, 243, 0.945)
+}
+
+.LifeStyle {
+    font-weight: 900;
+}
+
+#header {
+    background-image: url("https://png.pngtree.com/png-clipart/20220313/original/pngtree-spring-cherry-blossom-branch-petal-season-png-image_7429551.png");
+    background-size: 72%;
+    background-position: -30%;
+    height: 12rem;
+    border-radius: 0;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 5%;
+
 }
