--- a/style.css
+++ b/style.css
@@ -100,16 +100,16 @@ body{
     background-color:rgb(228, 253, 239);
 }
 
-.hidden {
-    display: none !important;
-}
-
 .blog-entry {
     display: flex;
     align-items: center;
     gap: 2em;
     padding-right: 2%;
     margin-bottom: 2em;
+}
+
+.hidden {
+    display: none;
 }
 
 .blog-entry img {
